<resources>
    <string name="header_hint_refresh_normal">下拉刷新</string>
    <string name="header_hint_refresh_ready">释放刷新</string>
    <string name="header_hint_refresh_loading">正在刷新</string>
    <string name="header_hint_refresh_time">时间</string>
    <string name="footer_hint_load_normal">加载更多</string>
    <string name="footer_hint_load_ready">释放加载更多</string>
    <string name="app_name">Solar Lamp</string>
    <string name="app_welcome_title_1">路灯数据 随你掌控</string>
    <string name="app_welcome_title_2">太阳能路灯管理系统</string>
    <string name="app_welcome_title_3">路灯管理系统</string>
    <string name="default_text">--</string>
    <string name="network_is_not_smooth">网络不通畅</string>
    <string name="open_light">亮灯</string>
    <string name="close_light">关灯</string>
    <string name="fault_light">故障</string>
    <string name="app_title">太阳能路灯系统</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="remember_password">记住密码</string>
    <string name="automatic_logon">自动登录</string>
    <string name="login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="homepage">首页</string>
    <string name="device">设备</string>
    <string name="report">报表</string>
    <string name="fault">故障</string>
    <string name="air_quality_colon">空气质量:</string>
    <string name="excellent">优</string>
    <string name="good">良</string>
    <string name="slight_pollution">轻度污染</string>
    <string name="moderate_pollution">中度污染</string>
    <string name="heavy_pollution">重度污染</string>
    <string name="severe_pollution">严重污染</string>
    <string name="unknown">未知</string>
    <string name="company">公司</string>
    <string name="company_name">公司名称</string>
    <string name="user_account">用户账号</string>
    <string name="user_type">用户类型</string>
    <string name="about">关于</string>
    <string name="version">版本</string>
    <string name="setting">设置</string>
    <string name="exit">退出</string>
    <string name="push">推送</string>
    <string name="push_setting">推送设置</string>
    <string name="push_reminder_off">已关闭推送提醒</string>
    <string name="switch_city">切换城市</string>
    <string name="control">控制</string>
    <string name="add_device">添加设备</string>
    <string name="inspection_setting">巡检设置</string>
    <string name="inspection_switch">巡检开关</string>
    <string name="inspection_interval_time">巡检间隔时间</string>
    <string name="add_project">添加项目</string>
    <string name="edit_project">编辑项目</string>
    <string name="add_network">添加网络</string>
    <string name="edit_network">编辑网络</string>
    <string name="add_lamp_control">添加灯控</string>
    <string name="edit_lamp_control">编辑灯控</string>
    <string name="online_rate">在线率</string>
    <string name="lighting_rate">亮灯率</string>
    <string name="failure_rate">故障率</string>
    <string name="total_generating_capacity">总发电量</string>
    <string name="total_installed_capacity">总装机容量</string>
    <string name="total_installed_lights">总安装灯数量</string>
    <string name="total_network_number">总网络数量</string>
    <string name="save_standard_coal">节约标准煤</string>
    <string name="cumulative_reduction_co2">累计减少CO₂</string>
    <string name="cumulative_reduction_so2">累计减少SO₂</string>
    <string name="ton">吨</string>
    <string name="all">全部</string>
    <string name="total_project">总项目</string>
    <string name="select_project">选择项目</string>
     <string name="enter_project">进入项目</string>
    <string name="total_lamp_control">总灯控</string>
    <string name="search">搜索</string>
    <string name="please_enter_the_keyword_search">请输入关键词搜索</string>
    <string name="inspection_count_down_colon">巡检倒计时:</string>
    <string name="project_number">项目编号</string>
    <string name="project_name">项目名称</string>
    <string name="customer_name">客户名称</string>
    <string name="province_in">所在省份</string>
    <string name="detailed_address">详细地址</string>
    <string name="project_name_cannot_be_empty">项目名称不能为空</string>
    <string name="project_number_cannot_be_empty">项目编号不能为空</string>
    <string name="province_in_cannot_be_empty">所在省份不能为空</string>
    <string name="customer_name_cannot_be_empty">客户名称不能为空</string>
    <string name="detailed_address_cannot_be_empty">详细地址不能为空</string>
    <string name="company_name_cannot_be_empty">公司名称不能为空</string>
    <string name="view_network">查看网络</string>
    <string name="delete_this_project">删除该项目</string>
    <string name="installed_number">装机数</string>
    <string name="gateway_number">网关数</string>
    <string name="enter_project_name">请在此输入项目名称</string>
    <string name="enter_project_number">请在此输入项目编号</string>
    <string name="enter_customer_name">请在此输入客户名称</string>
    <string name="enter_company_name">请在此输入公司名称</string>
    <string name="please_select_project">请选择项目</string>
    <string name="please_select_network">请选择网络</string>
    <string name="please_select_provinces">请选择省份</string>
    <string name="please_select_the_city">请选择市</string>
    <string name="enter_detailed_address">在此输入详细地址</string>
    <string name="add">添加</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="sure">确定</string>
    <string name="network_number">网络编号</string>
    <string name="network_name">网络名称</string>
    <string name="network_state">网络状态</string>
    <string name="section">路段</string>
    <string name="sim_number">SIM卡号</string>
    <string name="longitude">经度</string>
    <string name="latitude">纬度</string>
    <string name="registration_package">注册包</string>
    <string name="create_time">创建时间</string>
    <string name="belongs_to_the_project">所属项目</string>
    <string name="belongs_to_the_network">所属网络</string>
    <string name="belongs_to_the_project_cannot_be_empty">所属项目不能为空</string>
    <string name="network_number_cannot_be_empty">网络编号不能为空</string>
    <string name="network_name_cannot_be_empty">网络名称不能为空</string>
    <string name="section_cannot_be_empty">路段不能为空</string>
    <string name="sim_number_cannot_be_empty">SIM卡号不能为空</string>
    <string name="longitude_cannot_be_empty">经度不能为空</string>
    <string name="latitude_cannot_be_empty">纬度不能为空</string>
    <string name="please_enter_network_number">请在此输入网络编号</string>
    <string name="please_enter_network_name">请在此输入网络名称</string>
    <string name="please_enter_street_lamp_number">请在此输入路灯编号</string>
    <string name="please_enter_section">请在此输入路段</string>
    <string name="please_enter_sim_number">请在此输入SIM卡号</string>
    <string name="get">获取</string>
    <string name="map_acquisition">地图获取</string>
    <string name="network">网络</string>
    <string name="belongs_to_the_project_colon">所属项目:</string>
    <string name="existing_equipment">已有设备</string>
    <string name="project">项目</string>
     <string name="project_colon">项目:</string>
    <string name="lamp_control">灯控</string>
    <string name="street_lamp_number">路灯编号</string>
    <string name="position_information">位置信息</string>
    <string name="alarm_event">报警事件</string>
    <string name="alarm_time">报警时间</string>
    <string name="wireless_module_time">无线模块时间</string>
    <string name="wireless_module_id">无线模块ID</string>
    <string name="view_lamp_control">查看灯控</string>
    <string name="delete_this_network">删除该网络</string>
    <string name="marked_as_processed">标记已处理</string>
    <string name="marked_as_not_processed">标记未处理</string>
    <string name="delete">删除</string>
    <string name="fault_details">故障详情</string>
    <string name="select_lamp_control">选择灯控</string>
    <string name="selected_lamp_control">已选灯控</string>
    <string name="empty">清空</string>
    <string name="view_report">查看报表</string>
    <string name="update_time">更新时间</string>
    <string name="update_history">更新历史</string>
    <string name="voltage">电压</string>
    <string name="temperature">温度</string>
    <string name="voltage_V">电压(V)</string>
    <string name="electricity_A">电流(A)</string>
    <string name="temperature_0C">温度(°C)</string>
    <string name="power_W">功率(W)</string>
    <string name="electricity">电量</string>
    <string name="charging_status">充电状态</string>
    <string name="power">功率</string>
    <string name="close">关</string>
    <string name="open">开</string>
    <string name="aiming">调光</string>
    <string name="latest_update_time_colon">最新更新时间:</string>
    <string name="device_id">设备ID</string>
    <string name="network_id">网络ID</string>
    <string name="wireless_module_address">无线模块地址</string>
    <string name="address">地址</string>
    <string name="solar_panel_power">太阳能板功率</string>
    <string name="controller_information">控制器信息</string>
    <string name="rated_voltage">额定电压</string>
    <string name="controlled_temperature">控制温度</string>
    <string name="rated_current">额定电流</string>
    <string name="street_lamp_information">路灯信息</string>
    <string name="street_lamp_power">路灯功率</string>
    <string name="street_lamp_brightness">路灯亮度</string>
    <string name="battery_board_information">电池板信息</string>
    <string name="storage_battery_board_information">蓄电池信息</string>
    <string name="day_minimum_voltage">当天最低电压</string>
    <string name="day_peak_voltage">当天最高电压</string>
    <string name="charging_stage">充电阶段</string>
    <string name="total_over_time">总过放次数</string>
    <string name="over_time">过放次数</string>
    <string name="total_charge_time">总充电次数</string>
    <string name="running_days">运行天数</string>
    <string name="cumulative_generating_capacity">累计发电量</string>
    <string name="cumulative_electricity_consumption">累计用电量</string>
    <string name="delete_this_lamp_control">删除该灯控</string>
    <string name="state_colon">状态:</string>
    <string name="project_report">项目报表</string>
    <string name="lamp_control_report">灯控报表</string>
    <string name="read">读取</string>
    <string name="already_read">已读取</string>
    <string name="more_settings">更多设置</string>
    <string name="load_setting">负载设置</string>
    <string name="street_lamp_load_mode">路灯负载模式</string>
    <string name="first_working_hours">第一段工作时间(H)</string>
    <string name="first_working_power">第一段工作功率(%)</string>
    <string name="second_working_hours">第二段工作时间(H)</string>
    <string name="second_working_power">第二段工作功率(%)</string>
    <string name="third_working_hours">第三段工作时间(H)</string>
    <string name="third_working_power">第三段工作功率(%)</string>
    <string name="morning_light_time">晨亮时间(H)</string>
    <string name="morning_light_power">晨亮功率(%)</string>
    <string name="light_control_voltage">光控电压(V)</string>
    <string name="light_control_delay_time">光控延时时间(Min)</string>
    <string name="led_load_current">LED负载电流(mA)</string>
    <string name="last_parameter_setting_time">最后一次参数设置时间(H)</string>
    <string name="intelligent_power_control">智能功率控制</string>
    <string name="every_night_lighting_function">每晚亮灯功能</string>
    <string name="storage_battery_setting">蓄电池设置</string>
    <string name="storage_battery_capacity">蓄电池容量(AH)</string>
    <string name="storage_battery_type">蓄电池类型</string>
    <string name="overpressure_voltage">超压电压(V)</string>
    <string name="charging_limit_voltage">充电限制电压(V)</string>
    <string name="balance_charge_voltage">均衡充电电压(V)</string>
    <string name="lifting_charge_voltage">提升充电电压(V)</string>
    <string name="floating_charge_voltage">浮充充电电压(V)</string>
    <string name="lifting_charge_recovery_voltage">提升充电恢复电压(V)</string>
    <string name="over_recovery_voltage">过放恢复电压(V)</string>
    <string name="undervoltage_warning_voltage">欠压警告电压(V)</string>
    <string name="over_voltage">过放电压(V)</string>
    <string name="balance_charge_time">均衡充电时间(H)</string>
    <string name="lifting_charge_time">提升充电时间(H)</string>
    <string name="balance_charge_interval">均衡充电间隔(天)</string>
    <string name="temperature_compensation_coefficient">温度补偿系数(mV/°C/2V)</string>
    <string name="temperature_compensation_coefficient_peak_temperature">温度补偿系数(最高温度)(°C)</string>
    <string name="nothing_found">没有搜索结果</string>
</resources>