<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout style="@style/whiteNavigationBarStyle" >

        <ImageButton
            android:id="@+id/imgbtn_project_details_inspection_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:padding="10dip"
            android:src="@drawable/ic_project_setting" />

        <TextView
            android:id="@+id/tv_project_details_inspection_count_down"
            style="@style/NormalBlackTextSizeStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:text="@string/inspection_count_down_colon" />

        <TextView
            android:id="@+id/tv_project_details_inspection_count_down_value"
            style="@style/NormalBlackTextSizeStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_toLeftOf="@id/imgbtn_project_details_inspection_setting"
            android:layout_toRightOf="@id/tv_project_details_inspection_count_down"
            android:singleLine="true"
            android:text="@string/default_text" />
    </RelativeLayout>

    <LinearLayout
        style="@style/LeftRightLinearLayoutStyle"
        android:layout_marginTop="10dip" >

        <TextView
            style="@style/LeftTextViewStyle"
            android:text="@string/project_name" />

        <TextView
            android:id="@+id/tv_project_details_project_name_value"
            style="@style/rightTextViewStyle"
            android:text="@string/default_text" />
    </LinearLayout>

    <LinearLayout style="@style/LeftRightLinearLayoutStyle" >

        <TextView
            style="@style/LeftTextViewStyle"
            android:text="@string/project_number" />

        <TextView
            android:id="@+id/tv_project_details_project_number_value"
            style="@style/rightTextViewStyle"
            android:text="@string/default_text" />
    </LinearLayout>

    <LinearLayout style="@style/LeftRightLinearLayoutStyle" >

        <TextView
            style="@style/LeftTextViewStyle"
            android:text="@string/customer_name" />

        <TextView
            android:id="@+id/tv_project_details_customer_name_value"
            style="@style/rightTextViewStyle"
            android:text="@string/default_text" />
    </LinearLayout>

    <LinearLayout style="@style/LeftRightLinearLayoutStyle" >

        <TextView
            style="@style/LeftTextViewStyle"
            android:text="@string/company_name" />

        <TextView
            android:id="@+id/tv_project_details_company_name_value"
            style="@style/rightTextViewStyle"
            android:text="@string/default_text" />
    </LinearLayout>

    <LinearLayout style="@style/LeftRightLinearLayoutStyle" >

        <TextView
            style="@style/LeftTextViewStyle"
            android:text="@string/province_in" />

        <TextView
            android:id="@+id/tv_project_details_province_in_value"
            style="@style/rightTextViewStyle"
            android:text="@string/default_text" />
    </LinearLayout>

    <LinearLayout style="@style/LeftRightLinearLayoutStyle" >

        <TextView
            style="@style/LeftTextViewStyle"
            android:text="@string/detailed_address" />

        <TextView
            android:id="@+id/tv_project_details_detailed_address_value"
            style="@style/rightTextViewStyle"
            android:text="@string/default_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="1dip"
        android:layout_weight="2"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_project_details_installed_number_value"
                style="@style/hugeBlackTextSizeStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text" />

            <TextView
                style="@style/SmallGrayTextSizeStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/installed_number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dip"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_project_details_gateway_number_value"
                style="@style/hugeBlackTextSizeStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text" />

            <TextView
                style="@style/SmallGrayTextSizeStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/gateway_number" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_project_details_view_network"
            style="@style/NormalWhiteTextSizeStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:background="@drawable/bg_button_rounded_rectangle_blue"
            android:text="@string/view_network" />

        <Button
            android:id="@+id/btn_project_details_delete_this_project"
            style="@style/NormalWhiteTextSizeStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/bg_button_rounded_rectangle_red"
            android:text="@string/delete_this_project" />
    </LinearLayout>

</LinearLayout>